--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -282,6 +282,13 @@ a {
     font-size: 20px;
   }
 }
+.main__imgWrap2 {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 20px;
+}
 .main__card1 {
   background-color: #fff;
   border-radius: 25px 25px 25px 25px;
@@ -289,8 +296,13 @@ a {
   margin-top: 50px;
 }
 .main__card1_img {
-  width: 641px;
+  width: 640px;
   height: 480px;
+  margin: 0 auto;
+  border-radius: 10px;
+  border: 0.5px solid #000;
+  transition: 0.3s;
+  cursor: pointer;
 }
 @media (max-width: 426px) {
   .main__card1_img {
@@ -299,11 +311,37 @@ a {
   }
 }
 .main__card1_img2 {
-  width: 641px;
-  height: 480px;
+  width: 270px;
+  height: 150px;
+  border-radius: 10px;
+  border: 0.5px solid #000;
+  opacity: 0.7;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.main__card1_img2:hover {
+  opacity: 1;
 }
 @media (max-width: 426px) {
   .main__card1_img2 {
+    width: 100%;
+    height: 100%;
+  }
+}
+.main__card1_img3 {
+  width: 270px;
+  height: 150px;
+  border-radius: 10px;
+  border: 0.5px solid #000;
+  opacity: 0.7;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.main__card1_img3:hover {
+  opacity: 1;
+}
+@media (max-width: 426px) {
+  .main__card1_img3 {
     width: 100%;
     height: 100%;
   }
@@ -418,6 +456,13 @@ a {
     width: 120px;
   }
 }
+.reviews_wrapBox2 {
+  width: 680px;
+}
+.reviews_wrapBox3 {
+  text-align: right;
+  display: flex;
+}
 .reviews_box {
   width: 100%;
   height: 100%;
@@ -445,6 +490,19 @@ a {
 .reviews_sight {
   color: rgba(30, 43, 78, 0.6117647059);
   font-family: "Rubik Mono One";
+}
+.reviews_del {
+  align-items: center;
+  padding: 10px 25px;
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(255, 0, 0);
+  opacity: 0.6;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.reviews_del:hover {
+  opacity: 1;
 }
 .reviews_text {
   color: #1E2B4E;
@@ -676,4 +734,72 @@ a {
 
 .modal.open .modal__box {
   transform: scale(1);
+}
+
+.slider-container {
+  position: fixed;
+  width: 80%;
+  height: 90vh;
+  z-index: 11;
+  margin-top: 2.5%;
+  margin-left: 10%;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.slider {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 300%;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
+  overflow: hidden;
+}
+
+.slider img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.slider__btn-prev,
+.slider__btn-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.82);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.slider__btn-prev {
+  left: 10px;
+}
+
+.slider__btn-next {
+  right: 10px;
+}
+
+.screen_slider {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.368627451);
+  z-index: 11;
+  display: none;
+}
+
+#closeSlider {
+  float: right;
+  background-color: transparent;
+  border: none;
+  font-size: 45px;
+  margin-right: 50px;
+  margin-top: 30px;
+  cursor: pointer;
 }
